<resources>
    <string name="app_name">Angel\'s Job</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="curriculum_vitae">Curriculum Vitae</string>
    <string name="personal_info">Personal Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="logout">Logout</string>

    <string name="working_experience">Working Experience</string>

    <!--Address-->
    <string name="street">Street</string>
    <string name="house_no">No.</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="state_province_region">State/Province/Region</string>
    <string name="country">Country</string>

    <!--Working Experience-->
    <string name="begin">begin</string>
    <string name="end">end</string>

    <!--Employer-->
    <string name="employer">Employer</string>

</resources>
